--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,1 +1,54 @@
-[{"uid":2003,"userUID":"101","title":"ujj","dateCreate":"2023\/02\/06","dateDeadline":"2023\/02\/06","dateComplete":null,"decription":";lokijmuhnygbtf","status":"created","reward":"asdfdsf","timeNeeded":"10 Minutes","category":"Math"}]
+[
+    {
+        "uid": 2003,
+        "userUID": "101",
+        "title": "ujj",
+        "dateCreate": "2023\/02\/06",
+        "dateDeadline": "2023\/02\/06",
+        "dateComplete": null,
+        "decription": ";lokijmuhnygbtf",
+        "status": "created",
+        "reward": "asdfdsf",
+        "timeNeeded": "10 Minutes",
+        "category": "Math"
+    },
+    {
+        "uid": 2004,
+        "userUID": "102",
+        "title": "1234",
+        "dateCreate": "2023\/02\/06",
+        "dateDeadline": "2023\/02\/06",
+        "dateComplete": null,
+        "decription": "1234",
+        "status": "created",
+        "reward": "1234",
+        "timeNeeded": "30 Minutes",
+        "category": "English"
+    },
+    {
+        "uid": 2005,
+        "userUID": "102",
+        "title": "1234",
+        "dateCreate": "2023\/02\/06",
+        "dateDeadline": "2023\/02\/06",
+        "dateComplete": null,
+        "decription": "1234",
+        "status": "created",
+        "reward": "1234",
+        "timeNeeded": "30 Minutes",
+        "category": "English"
+    },
+    {
+        "uid": 2006,
+        "userUID": "101",
+        "title": "howdy",
+        "dateCreate": "2023\/02\/06",
+        "dateDeadline": "2023\/02\/06",
+        "dateComplete": null,
+        "decription": "just saying hi",
+        "status": "created",
+        "reward": "idk",
+        "timeNeeded": "5 Hours",
+        "category": "Chores"
+    }
+]
