added in the filtering code. Filtering is now finished?

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -27,7 +27,7 @@
     },
     {
         "uid": 2005,
-        "userUID": "102",
+        "userUID": "103",
         "title": "1234",
         "dateCreate": "2023\/02\/06",
         "dateDeadline": "2023\/02\/06",
@@ -50,5 +50,31 @@
         "reward": "idk",
         "timeNeeded": "5 Hours",
         "category": "Chores"
+    },
+    {
+        "uid": 2007,
+        "userUID": "103",
+        "title": "asd",
+        "dateCreate": "2023\/02\/21",
+        "dateDeadline": "2023\/02\/21",
+        "dateComplete": null,
+        "decription": "asdf",
+        "status": "created",
+        "reward": "asd",
+        "timeNeeded": "10 Minutes",
+        "category": "Personal"
+    },
+    {
+        "uid": 2008,
+        "userUID": "101",
+        "title": "123412341234",
+        "dateCreate": "2023\/02\/23",
+        "dateDeadline": "2023\/02\/23",
+        "dateComplete": null,
+        "decription": "123412341234234",
+        "status": "created",
+        "reward": "1234",
+        "timeNeeded": "10 Minutes",
+        "category": "Personal"
     }
 ]
