--- a/data/tasks.json
+++ b/data/tasks.json
@@ -76,5 +76,70 @@
         "reward": "1234",
         "timeNeeded": "10 Minutes",
         "category": "Personal"
+    },
+    {
+        "uid": 2009,
+        "userUID": "103",
+        "title": "Spam",
+        "dateCreate": "2023\/02\/24",
+        "dateDeadline": "2023\/02\/24",
+        "dateComplete": null,
+        "decription": "YEs",
+        "status": "created",
+        "reward": "Money",
+        "timeNeeded": "15 Minutes",
+        "category": "Chores"
+    },
+    {
+        "uid": 2010,
+        "userUID": "102",
+        "title": "Spam",
+        "dateCreate": "2023\/02\/24",
+        "dateDeadline": "2023\/02\/24",
+        "dateComplete": null,
+        "decription": "yes",
+        "status": "created",
+        "reward": "Money",
+        "timeNeeded": "5 Minutes",
+        "category": "Chores"
+    },
+    {
+        "uid": 2011,
+        "userUID": "101",
+        "title": "Bro",
+        "dateCreate": "2023\/02\/24",
+        "dateDeadline": "2023\/02\/24",
+        "dateComplete": null,
+        "decription": "Ong ",
+        "status": "created",
+        "reward": "Dawg",
+        "timeNeeded": "5 Hours",
+        "category": "Chores"
+    },
+    {
+        "uid": 2012,
+        "userUID": "102",
+        "title": "22",
+        "dateCreate": "2023\/02\/24",
+        "dateDeadline": "2023\/02\/24",
+        "dateComplete": null,
+        "decription": "qw",
+        "status": "created",
+        "reward": "Money",
+        "timeNeeded": "5 Minutes",
+        "category": "Personal"
+    },
+    {
+        "uid": 2013,
+        "userUID": "103",
+        "title": "aa",
+        "dateCreate": "2023\/02\/24",
+        "dateDeadline": "2023\/02\/24",
+        "dateComplete": null,
+        "decription": "Bro",
+        "status": "created",
+        "reward": "A cat",
+        "timeNeeded": "5 Minutes",
+        "category": "Chores"
     }
 ]
