--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,18 +1,5 @@
 [
     {
-        "uid": 2003,
-        "userUID": "101",
-        "title": "ujj",
-        "dateCreate": "2023\/02\/06",
-        "dateDeadline": "2023\/02\/06",
-        "dateComplete": null,
-        "decription": ";lokijmuhnygbtf",
-        "status": "created",
-        "reward": "asdfdsf",
-        "timeNeeded": "10 Minutes",
-        "category": "Math"
-    },
-    {
         "uid": 2004,
         "userUID": "102",
         "title": "1234",
@@ -22,7 +9,7 @@
         "decription": "1234",
         "status": "created",
         "reward": "1234",
-        "timeNeeded": "30 Minutes",
+        "timeNeeded": "30",
         "category": "English"
     },
     {
@@ -35,34 +22,8 @@
         "decription": "1234",
         "status": "created",
         "reward": "1234",
-        "timeNeeded": "30 Minutes",
+        "timeNeeded": "30",
         "category": "English"
-    },
-    {
-        "uid": 2006,
-        "userUID": "101",
-        "title": "howdy",
-        "dateCreate": "2023\/02\/06",
-        "dateDeadline": "2023\/02\/06",
-        "dateComplete": null,
-        "decription": "just saying hi",
-        "status": "created",
-        "reward": "idk",
-        "timeNeeded": "5 Hours",
-        "category": "Chores"
-    },
-    {
-        "uid": 2007,
-        "userUID": "103",
-        "title": "asd",
-        "dateCreate": "2023\/02\/21",
-        "dateDeadline": "2023\/02\/21",
-        "dateComplete": null,
-        "decription": "asdf",
-        "status": "created",
-        "reward": "asd",
-        "timeNeeded": "10 Minutes",
-        "category": "Personal"
     },
     {
         "uid": 2008,
@@ -74,125 +35,8 @@
         "decription": "123412341234234",
         "status": "created",
         "reward": "1234",
-        "timeNeeded": "10 Minutes",
+        "timeNeeded": "10",
         "category": "Personal"
-    },
-    {
-        "uid": 2009,
-        "userUID": "103",
-        "title": "Spam",
-        "dateCreate": "2023\/02\/24",
-        "dateDeadline": "2023\/02\/24",
-        "dateComplete": null,
-        "decription": "YEs",
-        "status": "created",
-        "reward": "Money",
-        "timeNeeded": "15 Minutes",
-        "category": "Chores"
-    },
-    {
-        "uid": 2010,
-        "userUID": "102",
-        "title": "Spam",
-        "dateCreate": "2023\/02\/24",
-        "dateDeadline": "2023\/02\/24",
-        "dateComplete": null,
-        "decription": "yes",
-        "status": "created",
-        "reward": "Money",
-        "timeNeeded": "5 Minutes",
-        "category": "Chores"
-    },
-    {
-        "uid": 2011,
-        "userUID": "101",
-        "title": "Bro",
-        "dateCreate": "2023\/02\/24",
-        "dateDeadline": "2023\/02\/24",
-        "dateComplete": null,
-        "decription": "Ong ",
-        "status": "created",
-        "reward": "Dawg",
-        "timeNeeded": "5 Hours",
-        "category": "Chores"
-    },
-    {
-        "uid": 2012,
-        "userUID": "102",
-        "title": "22",
-        "dateCreate": "2023\/02\/24",
-        "dateDeadline": "2023\/02\/24",
-        "dateComplete": null,
-        "decription": "qw",
-        "status": "created",
-        "reward": "Money",
-        "timeNeeded": "5 Minutes",
-        "category": "Personal"
-    },
-    {
-        "uid": 2013,
-        "userUID": "103",
-        "title": "aa",
-        "dateCreate": "2023\/02\/24",
-        "dateDeadline": "2023\/02\/24",
-        "dateComplete": null,
-        "decription": "Bro",
-        "status": "created",
-        "reward": "A cat",
-        "timeNeeded": "5 Minutes",
-        "category": "Chores"
-    },
-    {
-        "uid": 2014,
-        "userUID": "101",
-        "title": "sdsadasd",
-        "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2023\/02\/27",
-        "dateComplete": null,
-        "decription": "asdasdasdasdas",
-        "status": "created",
-        "reward": "adasdasd",
-        "timeNeeded": "5 Minutes",
-        "category": "English"
-    },
-    {
-        "uid": 2015,
-        "userUID": "103",
-        "title": "dasda",
-        "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2023\/02\/27",
-        "dateComplete": null,
-        "decription": "dasdads",
-        "status": "created",
-        "reward": "sdasdas",
-        "timeNeeded": "10 Minutes",
-        "category": "Chores"
-    },
-    {
-        "uid": 2016,
-        "userUID": "102",
-        "title": "dasdasda",
-        "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2023\/02\/27",
-        "dateComplete": null,
-        "decription": "dsadasdasda",
-        "status": "created",
-        "reward": "asdasdas",
-        "timeNeeded": "30 Minutes",
-        "category": "Math"
-    },
-    {
-        "uid": 2017,
-        "userUID": "102",
-        "title": "asdf",
-        "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2023\/02\/27",
-        "dateComplete": null,
-        "decription": "asdff",
-        "status": "created",
-        "reward": "asdf",
-        "timeNeeded": "15 Minutes",
-        "category": "Chores"
     },
     {
         "uid": 2018,
@@ -204,21 +48,8 @@
         "decription": "1233",
         "status": "created",
         "reward": "123",
-        "timeNeeded": "10 Minutes",
+        "timeNeeded": "10",
         "category": "Personal"
-    },
-    {
-        "uid": 2019,
-        "userUID": "102",
-        "title": "123",
-        "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2323\/12\/23",
-        "dateComplete": null,
-        "decription": "1123",
-        "status": "created",
-        "reward": "123",
-        "timeNeeded": "Choose...",
-        "category": "Choose..."
     },
     {
         "uid": 2020,
@@ -230,20 +61,72 @@
         "decription": "1234",
         "status": "created",
         "reward": "123",
-        "timeNeeded": "15 Minutes",
+        "timeNeeded": "15",
         "category": "Personal"
     },
     {
-        "uid": 2021,
-        "userUID": "102",
-        "title": "qwerty",
+        "uid": 2022,
+        "userUID": "101",
+        "title": "hello please work",
         "dateCreate": "2023\/02\/27",
-        "dateDeadline": "2023\/02\/27",
+        "dateDeadline": "2023\/02\/15",
         "dateComplete": null,
-        "decription": "qwerty",
+        "decription": "please work now",
         "status": "created",
-        "reward": "qwerty",
-        "timeNeeded": "30 Minutes",
+        "reward": "100",
+        "timeNeeded": "10",
+        "category": "Personal"
+    },
+    {
+        "uid": 2023,
+        "userUID": "102",
+        "title": "ok now work",
+        "dateCreate": "2023\/02\/27",
+        "dateDeadline": "2023\/03\/09",
+        "dateComplete": null,
+        "decription": "please",
+        "status": "created",
+        "reward": "100000",
+        "timeNeeded": "15",
+        "category": "Chores"
+    },
+    {
+        "uid": 2025,
+        "userUID": "102",
+        "title": "123",
+        "dateCreate": "2023\/02\/28",
+        "dateDeadline": "3090\/12\/12",
+        "dateComplete": null,
+        "decription": "123",
+        "status": "created",
+        "reward": "9",
+        "timeNeeded": "15",
         "category": "Science"
+    },
+    {
+        "uid": 2026,
+        "userUID": "102",
+        "title": "chores",
+        "dateCreate": "2023\/02\/28",
+        "dateDeadline": "2023\/02\/01",
+        "dateComplete": null,
+        "decription": "chores",
+        "status": "created",
+        "reward": "12",
+        "timeNeeded": "10",
+        "category": "Chores"
+    },
+    {
+        "uid": 2027,
+        "userUID": "102",
+        "title": "hello work",
+        "dateCreate": "2023\/02\/28",
+        "dateDeadline": "2023\/02\/15",
+        "dateComplete": null,
+        "decription": "asfsadf",
+        "status": "created",
+        "reward": "1000",
+        "timeNeeded": "10",
+        "category": "Math"
     }
 ]
