all counts are working

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -128,5 +128,44 @@
         "reward": "1000",
         "timeNeeded": "10",
         "category": "Math"
+    },
+    {
+        "uid": 2028,
+        "userUID": "101",
+        "title": "fhjl",
+        "dateCreate": "2023\/02\/28",
+        "dateDeadline": "2023\/03\/01",
+        "dateComplete": null,
+        "decription": "rth",
+        "status": "created",
+        "reward": "67",
+        "timeNeeded": "5",
+        "category": "Chores"
+    },
+    {
+        "uid": 2029,
+        "userUID": "102",
+        "title": "1234",
+        "dateCreate": "2023\/03\/01",
+        "dateDeadline": "2070\/04\/04",
+        "dateComplete": null,
+        "decription": "1234",
+        "status": "created",
+        "reward": "1234",
+        "timeNeeded": "5",
+        "category": "Chores"
+    },
+    {
+        "uid": 2030,
+        "userUID": "101",
+        "title": "asdf",
+        "dateCreate": "2023\/03\/01",
+        "dateDeadline": "2012\/12\/12",
+        "dateComplete": null,
+        "decription": "hello",
+        "status": "created",
+        "reward": "92",
+        "timeNeeded": "300",
+        "category": "Personal"
     }
 ]
